--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b3-fontend-social-net",
+  "name": "b3_frontend_social_net",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "formik": "^2.4.6",
+    "javascript-time-ago": "^2.5.11",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-time-ago": "^7.3.3"
+    "react-time-ago": "^7.3.3",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
